link-style button alignment fixed
svn changeset:3136/svn branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/button/button.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/button/button.css
@@ -12,6 +12,7 @@
 	text-align: left;
 	text-decoration: underline;
 	background: none;
+	padding-left: 0px;
 }
 .i-button-link span {
 	text-decoration: underline;
